# marsou

./: .gitignore  CLAUDE.md  CY-DRG-Lookup.html  DEPLOYMENT.md  README.md  app.py  bank-reconciliation.html  build.js  package-lock.json  package.json  pyproject.toml  requirements.txt  specialized-ceiling-app.html
daspani/: __init__.py  __main__.py  claude_extract.py  excel_write.py  models.py  new_year.py  pdf_images.py  report.py  verify.py
deploy/: install.sh  invoice-agent-daily.service  invoice-agent-web.service  vendor-cleanup-web.service
docs/: index.html  install.html
examples/: worked_examples.py
fixtures/: README.md
invoice-agent/: .gitignore  CLAUDE.md  README.md  requirements.txt  run_daily.py  serve_approvals.py
iphone_app/: index.html  manifest.webmanifest  sw.js
okypy-boardpack/: .gitignore  Launch.py  README.md  app.py  config.py  generate.py  requirements-ui.txt  requirements.txt  run.bat  run.command  serve.py  ΟΔΗΓΙΕΣ.html
recon/: __init__.py  build_xlsx.py  checks.py  extract.py  identify.py  models.py  numbers.py
recon-tool/: .gitignore  CLAUDE.md  build.py
samples/: bank_statement_sample.csv  sap_bank_movements_sample.csv
shotgun_ballistics/: __init__.py  calculator.py  cli.py  exterior.py  lethality.py  materials.py  patterns.py  pellets.py  penetration.py  species.py
src/: CY-DRG-Lookup.src.html  app.src.html  core.js
test/: browser-e2e.js  fixture-data.js  make-fixtures.js  recalc-test.js  run-tests.js
tests/: conftest.py  synth.py  test_acceptance.py  test_app.py  test_checks.py  test_excel_write.py  test_exterior.py  (+10 more)
(+148 files in other folders)
