[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shotgun-ballistics"
version = "0.1.0"
description = "Shotgun ballistics & terminal-lethality (clean-kill probability) calculator for wingshooting"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ballistics", "shotgun", "wingshooting", "hunting", "lethality"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
shotgun-ballistics = "shotgun_ballistics.cli:main"

[tool.setuptools]
packages = ["shotgun_ballistics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
